Fixing some lint errors and warnings

--- a/app/src/main/res/layout/category_type.xml
+++ b/app/src/main/res/layout/category_type.xml
@@ -30,10 +30,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
+                android:layout_marginEnd="@dimen/margin_normal"
                 android:text="@{item}"
                 android:textColor="@color/black"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@+id/imageView"
+                app:layout_constraintEnd_toStartOf="@+id/iv_next"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="Category item name" />
