--- a/app/src/main/res/layout-v26/fragment_category_item_details.xml
+++ b/app/src/main/res/layout-v26/fragment_category_item_details.xml
@@ -59,6 +59,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_huge"
             android:layout_marginTop="@dimen/margin_huge"
+            android:justificationMode="inter_word"
             android:text="@{vm.categoryItem.description}"
             android:textSize="16sp"
             tools:text="These fearsome monsters have lived in Hyrule since ancient times. Their ability to breathe fire makes White-Maned Lynels among the toughest of the species; each one of their attacks is an invitation to the grave. There are so few eyewitness accounts of this breed because a White-Maned Lynel is not one to let even simple passersby escape with their lives." />
