--- a/app/src/main/res/layout/fragment_category_item_list.xml
+++ b/app/src/main/res/layout/fragment_category_item_list.xml
@@ -118,14 +118,31 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_search"
+                style="@style/Widget.Material3.Button.TextButton"
+                isVisible="@{vm.isSearchIconVisible()}"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minWidth="0dp"
+                android:minHeight="0dp"
+                app:icon="@drawable/ic_search"
+                app:iconPadding="0dp"
+                app:iconSize="@dimen/icon_small"
+                app:iconTint="?attr/colorPrimary"
+                app:layout_constraintBottom_toBottomOf="@+id/til_search"
+                app:layout_constraintEnd_toEndOf="@+id/til_search"
+                app:layout_constraintTop_toTopOf="@+id/til_search" />
+
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_clear"
                 style="@style/Widget.Material3.Button.TextButton"
-                iconDrawable="@{vm.searchIcon}"
+                isVisible="@{vm.isClearIconVisible()}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:minWidth="0dp"
                 android:minHeight="0dp"
                 android:onClick="@{() -> vm.onClearButtonClick()}"
+                app:icon="@drawable/ic_close"
                 app:iconPadding="0dp"
                 app:iconSize="@dimen/icon_small"
                 app:iconTint="?attr/colorPrimary"
